--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body{
 }
 .back-grey{
     background-color: #d3d3d3;
+    
+}
+.row{
+    padding: 30px;
 }
     
 /* ------SECTION------- */
@@ -80,22 +84,17 @@ flex-grow: 1;
 
 .first-segment{
     display: flex;
-    padding: 30px;
-    
 }
 
 .second-segment{
     display: flex;
     flex-direction: row-reverse;
-    padding: 30px;
+    
 }
 
 .green-box{
     background-color: #218b21;
     height: 700px;
-}
-.fourth-segment{
-    padding: 30px;
 }
 
      /* FOOTER */
@@ -107,9 +106,8 @@ footer{
     display: flex;
     padding-top: 10px;
     padding-bottom: 30px;
-    padding-left: 30px;
-    padding-right: 30px;
     border-bottom: 1px solid white;
+    margin-bottom: 30px;
 }
 .pink-box{
     background-color: #f08180;
@@ -132,7 +130,4 @@ footer{
     background-color: #f9bdc3;
     padding: 5px;
     border: 1px dashed black;
-}
-.last-block{
-    padding: 30px;
 }
