--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,11 @@ body{
 
 h1{
     padding: 30px 0;
-    width: 80%;
+    
 }
 p{
     padding-bottom: 10px;
-    width: 80%;
+    
 
 }
 /* HEADER */
@@ -121,6 +121,12 @@ button.button-black{
 }
 .green-box{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.green-box>p{
+    max-width: 874px;
 }
 
 
